# qavimator

./: .hgignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile  configure  configure.bat  make.bat  makefile
deployment/linux/: deploy.sh
deployment/linux/resources/: README  qavimator.sh
deployment/osx/: deploy.sh  make_bundle
deployment/osx/resources/QAvimator.app/Contents/Resources/: qt.conf
deployment/windows/: Qt_dlls.txt  deploy.bat  qavimator.nsi  qavimator.rc
deployment/windows/resources/: qavimator.nsi  qavimator.rc
libquat/: MT_Assert.cpp  MT_assert.h
other/osx/: make_bundle
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  animation.cpp  animation.h  animationmanager.cpp  animationmanager.h  animationview.cpp  animationview.h  avatar.cpp  avatar.h  avatarmanager.cpp  avatarmanager.h  bvh.cpp  bvh.h  bvhnode.cpp  bvhnode.h  bvhparser.cpp  bvhparser.h  camera.cpp  camera.h  constants.cpp  constants.h  filemanager.cpp  filemanager.h  floor.cpp  floor.h  iktree.cpp  iktree.h  joint.cpp  joint.h  main.cpp  mainapplicationform.ui  mesh.cpp  mesh.h  meshmodel.cpp  meshmodel.h  metadata.cpp  metadata.h  (+52 more)
